--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -3,13 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_main"
-    app:startDestination="@id/movieDetailsActivity">
+    app:startDestination="@id/homeFragment">
 
-    <activity
-        android:id="@+id/movieDetailsActivity"
-        android:name="com.example.cineflix.View.Activities.MovieDetailsActivity"
-        android:label="activity_movie_details"
-        tools:layout="@layout/activity_movie_details" />
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.example.cineflix.View.Fragments.HomeFragment"
@@ -19,4 +14,36 @@
             android:id="@+id/action_homeFragment_to_movieDetailsActivity"
             app:destination="@id/movieDetailsActivity" />
     </fragment>
+    <activity
+        android:id="@+id/moviePlayerActivity2"
+        android:name="com.example.cineflix.View.Activities.MoviePlayerActivity"
+        android:label="activity_movie_player"
+        tools:layout="@layout/activity_movie_player" >
+    </activity>
+    <activity
+        android:id="@+id/mainActivity"
+        android:name="com.example.cineflix.View.Activities.MainActivity"
+        android:label="activity_main"
+        tools:layout="@layout/activity_main" />
+    <fragment
+        android:id="@+id/accountFragment2"
+        android:name="com.example.cineflix.View.Fragments.AccountFragment"
+        android:label="fragment_account"
+        tools:layout="@layout/fragment_account" />
+    <fragment
+        android:id="@+id/bookmarkFragment"
+        android:name="com.example.cineflix.View.Fragments.BookmarkFragment"
+        android:label="fragment_bookmark"
+        tools:layout="@layout/fragment_bookmark" />
+    <fragment
+        android:id="@+id/searchFragment"
+        android:name="com.example.cineflix.View.Fragments.SearchFragment"
+        android:label="fragment_search"
+        tools:layout="@layout/fragment_search" />
+    <activity
+        android:id="@+id/movieDetailsActivity"
+        android:name="com.example.cineflix.View.Activities.MovieDetailsActivity"
+        android:label="activity_movie_details"
+        tools:layout="@layout/activity_movie_details" />
+
 </navigation>
