--- a/app/src/main/res/layout/activity_movie_player.xml
+++ b/app/src/main/res/layout/activity_movie_player.xml
@@ -101,9 +101,30 @@
                 />
 
         </LinearLayout>
+        <LinearLayout
+            android:id="@+id/videoView_unlock_screen"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal|bottom"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:visibility="gone"
+            android:layout_margin="20dp">
+            <ImageView
+                android:src="@drawable/netflix_lock_black"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:tint="@color/red"
+                android:layout_marginRight="10dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Khoá"
+                android:textStyle="bold"
+                android:textSize="12dp"
+                android:textColor="@color/red"/>
+        </LinearLayout>
     </FrameLayout>
-    
-
 
     <include layout="@layout/custom_video_player"
         android:visibility="gone"
