--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,14 +1,166 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".View.Fragments.SearchFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    tools:context=".View.Fragments.SearchFragment"
+    android:background="#010002">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <SearchView
+        android:id="@+id/searchView"
+        android:focusableInTouchMode="true"
+        android:layout_marginTop="50dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="50dp"
+        android:layout_marginHorizontal="10dp"
+        android:iconifiedByDefault="false"
+        android:queryHint="Tìm kiếm..."
+        app:queryBackground="@android:color/transparent"
+        android:background="@drawable/rectangle_box_slim"
+        >
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="10dp"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
+            >
+            <androidx.appcompat.widget.AppCompatEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:imeOptions="actionSearch"
+                android:inputType="text"
+                />
+        </com.google.android.material.textfield.TextInputLayout>
+    </SearchView>
 
-</FrameLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        >
+        <com.google.android.material.button.MaterialButton
+            app:icon="@drawable/check_icon"
+            app:cornerRadius="10dp"
+            android:text="Phim lẻ"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            app:iconTint="@android:color/white"
+            android:textColor="@android:color/white"
+            android:textSize="15dp"
+            android:layout_marginRight="10dp"
+            android:backgroundTint="@color/red"
+            />
+        <com.google.android.material.button.MaterialButton
+            app:icon="@drawable/check_icon"
+            app:cornerRadius="10dp"
+            android:text="Phim bộ"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            app:iconTint="@android:color/white"
+            android:textColor="@android:color/white"
+            android:textSize="15dp"
+            android:backgroundTint="@color/red"
+            />
+
+    </LinearLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginHorizontal="5dp"
+            >
+            <TextView
+                android:id="@+id/resultTitle"
+                android:textColor="@android:color/white"
+                android:text="Kết quả tìm kiếm"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                android:layout_marginBottom="15dp"
+                android:layout_marginHorizontal="5dp"
+                android:visibility="gone"
+                tools:visibility="visible"
+                />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/search_results_rc"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/search_history_ll"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            >
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/search_history_rc"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                tools:visibility="visible"
+                android:layout_margin="10dp"
+                />
+<!--            <com.google.android.material.button.MaterialButton-->
+<!--                android:id="@+id/delete_all_button"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="Xoá lịch sử"-->
+<!--                android:textSize="18sp"-->
+<!--                android:backgroundTint="#212121"-->
+<!--                app:cornerRadius="0dp"-->
+<!--                android:paddingVertical="12dp"-->
+<!--                app:icon="@drawable/trash_ic"-->
+<!--                app:iconGravity="textStart"-->
+<!--                android:textColor="@android:color/white"-->
+<!--                app:iconTint="@android:color/white"-->
+<!--                android:layout_weight="0"-->
+<!--                />-->
+        </LinearLayout>
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom">
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/delete_all_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Xoá lịch sử"
+                android:textSize="18sp"
+                android:backgroundTint="#212121"
+                app:cornerRadius="0dp"
+                android:paddingVertical="12dp"
+                app:icon="@drawable/trash_ic"
+                app:iconGravity="textStart"
+                android:textColor="@android:color/white"
+                app:iconTint="@android:color/white"
+                android:insetTop="0dp"
+                android:insetBottom="0dp"
+                android:layout_marginBottom="80dp"
+                android:visibility="gone"
+                tools:visibility="visible"
+                />
+        </FrameLayout>
+    </FrameLayout>
+
+    <ProgressBar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:id="@+id/search_loading"
+
+        />
+</LinearLayout>
