--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -39,7 +39,11 @@
         android:id="@+id/searchFragment"
         android:name="com.example.cineflix.View.Fragments.SearchFragment"
         android:label="fragment_search"
-        tools:layout="@layout/fragment_search" />
+        tools:layout="@layout/fragment_search" >
+        <action
+            android:id="@+id/action_searchFragment_to_movieDetailsActivity"
+            app:destination="@id/movieDetailsActivity" />
+    </fragment>
     <activity
         android:id="@+id/movieDetailsActivity"
         android:name="com.example.cineflix.View.Activities.MovieDetailsActivity"
