--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -13,6 +13,9 @@
         <action
             android:id="@+id/action_homeFragment_to_movieDetailsActivity"
             app:destination="@id/movieDetailsActivity" />
+        <action
+            android:id="@+id/action_homeFragment_to_tvDetailsActivity"
+            app:destination="@id/tvDetailsActivity" />
     </fragment>
     <activity
         android:id="@+id/moviePlayerActivity2"
@@ -49,5 +52,10 @@
         android:name="com.example.cineflix.View.Activities.MovieDetailsActivity"
         android:label="activity_movie_details"
         tools:layout="@layout/activity_movie_details" />
+    <activity
+        android:id="@+id/tvDetailsActivity"
+        android:name="com.example.cineflix.View.Activities.TvDetailsActivity"
+        android:label="activity_tv_details"
+        tools:layout="@layout/activity_tv_details" />
 
 </navigation>
